# rigshospitalet-analysis

./: .gitignore  README.md  main.py  prep_vs_inor_test.ipynb  pyproject.toml  rigshospitalet_eda.ipynb  rigshospitalet_high_impact_non_eye.ipynb  rigshospitalet_step_gaps.ipynb
docs/: key_terms.md  poster_analysis.md  related_work.md  w2_explainer.md  windows_overview.md
docs/data/: prep-time-definitions.md
docs/ideas/: complexity-clustering.md  overtime-prediction.md  prep-time-regression.md  procedure-embeddings.md  total-inor-prediction.md
docs/plans/: plan-linus.md
eda/linus/: delay_cascade.py  delay_causes.py  inor_decomposition.py  inor_decomposition_plots.py  or_turnaround.py  or_turnaround_plots.py  patient_prep.py  planning_gap.py  prep_scheduling_gap.py
eda/mathilde/: prep_gap_definitions.md  prep_story.ipynb  prep_story.md
eda/mathilde/prep-complexity-gap/: prep_story.ipynb
poster/: build_poster.py  explore_anscombe_v2.py  fix_gantt.py  fix_heatmap.py  poster.md
poster/final/: STUDY_GUIDE.md  explore_anscombe.py  fix_gantt.py  fix_violin_r2.py  problem_chart.py  problem_overrun.py
prep-complexity-gap/: planned_prep_allocation.ipynb  scheduling_gap_notes.md
preperation_allocation/: README.md
src/data/: loader.py
src/utils/: logger.py
